--- a/clientSide/index.css
+++ b/clientSide/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.active-cell:hover {
+    background-color: darkslategray;
+}
+
+.inactive-cell:hover{
+    background-color: red;
+}
